--- a/src/styling/_reset.scss
+++ b/src/styling/_reset.scss
@@ -12,4 +12,5 @@ button {
 
 .Link {
 	text-decoration: none;
+	color: gray;
 }
